# X-V-Server

./: .gitignore  Cargo.toml  README.md  Rocket.toml  todo
database_schema/: xvdb_schema.sql
src/: auth.rs  cors.rs  database.rs  main.rs  routes.rs
src/auth/: hash.rs
src/database/: query.rs  user.rs
src/routes/: auth.rs  change.rs  types.rs  user.rs  user_get.rs
