[package]
name = "x_v_server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
regex = "1.10.6"
rocket = {version="0.5.1", features = ["json", "secrets"]}
rust-argon2 = "2.1.0"
serde = "1.0.210"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "runtime-tokio-native-tls"] }
tokio = { version = "1.40.0", features = ["full"] }
shuttle-runtime = "*"
shuttle-rocket = "*"
rustls = "0.23.21"
